--- a/checkout-ui-custom/src/views/common/checkout-header.html
+++ b/checkout-ui-custom/src/views/common/checkout-header.html
@@ -1,6 +1,4 @@
-<header class="header-container">
-	<a href="/" title="Go to homepage">
-		<img src="/arquivos/logo-aiwa-header.png" />
-	</a>
-	<img src="/arquivos/safe-buy-aiwa.png" />
-</header>
+<div class="header-container">
+	<a class="header-link" href="/" title="Go to homepage"><img src="/arquivos/Logo.svg" /></a>
+	<hr>
+  </div>
