--- a/checkout-ui-custom/src/views/common/checkout-footer.html
+++ b/checkout-ui-custom/src/views/common/checkout-footer.html
@@ -1,32 +1,24 @@
-<footer class="footer">
-	<div class="footer-payments">
-		<p class="footer-payments__text">Pague com</p>
-		<img src="/arquivos/pagamentos-aiwa-footer.png" class="footer-payments__cards" />
-	</div>
-	<div class="footer-infos">
-		<a href="/" class="footer-infos__link">
-			<img src="/arquivos/logo-aiwa-footer.png" class="footer-infos__link-logo" />
-		</a>
-		<div class="footer-infos__content">
-			<p class="footer-infos__content-rights">
-				2022 @ All Right Reserved to Aiwa Brasil
-			</p>
-			<p class="footer-infos__content-data">
-				CNPJ: 07.666.567/0001-40 - Endereço: Estrada da Volta - 1200 - Conceição
-				Do Jacuípe - BA
-			</p>
-		</div>
-		<div class="footer-logos">
-			<div class="footer-logos__content">
-				<p class="footer-logos__content-text">Tecnologia</p>
-				<img src="/arquivos/logo-vtex.png" class="footer-logos__content-logo" />
-			</div>
-			<div class="footer-logos__content">
-				<p class="footer-logos__content-text">Feito por</p>
-				<a href="https://www.b8one.com/" target="_blank">
-					<img src="/arquivos/logo-b8one.png" class="footer-logos__content-logo" />
-				</a>
-			</div>
-		</div>
-	</div>
-</footer>
+<div class="footer-container">
+	<div class="footer-container-upper">
+      <div class="footer-content-upper">
+        <span class="footer-upper-text">Pagamenti sicuri</span>
+        <img class="footer-lock-icon" src="/arquivos/lock-icon.svg" alt="lock-icon">
+        <div class="footer-card-list">
+          <img class="footer-card" src="/arquivos/visa.png" alt="visa">
+          <img class="footer-card" src="/arquivos/mastercard.png" alt="mastercard">
+          <img class="footer-card" src="/arquivos/maestro.png" alt="maestro">
+          <img class="footer-card" src="/arquivos/amex.png" alt="american express">
+          <img class="footer-card" src="/arquivos/paypal.png" alt="paypal">
+          <img class="footer-card" src="/arquivos/postepay.png" alt="postepay">
+          <img class="footer-card" src="/arquivos/contrassegno.png" alt="contrassegno">
+          <img class="footer-card" src="/arquivos/bonifico.png" alt="bonifico">
+        </div>
+      </div>
+  	</div>
+  	<div class="footer-container-lower">
+      <div class="footer-content-lower">
+        <span class="footer-info">BBO Srl - Sede operativa: Via Galla Placidia 28 - 00159 ROMA (RM) Italia | Capitale sociale versato: 10.000€ | P.Iva IT10135840964 | REA 2508431 | Copyright © 2022. All Rights Reserved</span>
+        <img class="footer-vtex-logo" src="/arquivos/vtexWhiteLogo.svg" alt="vtex-logo">
+        </div>
+     </div>
+</div>
