--- a/sass/footer/vtex.rich-text.scss
+++ b/sass/footer/vtex.rich-text.scss
@@ -106,7 +106,7 @@
     }
   }
 
-  &--aiwaInfoOne {
+  &--footerInfoOne {
     margin: 0 0 4px;
     font-size: 12px;
     color: #fff;
@@ -114,7 +114,7 @@
     line-height: 16px;
   }
 
-  &--aiwaInfoTwo {
+  &--footerInfoTwo {
     margin: 0;
     font-size: 12px;
     line-height: 16px;
