[feature/22062] shopper-location styling

--- a/sass/product/vtex.flex-layout.scss
+++ b/sass/product/vtex.flex-layout.scss
@@ -1355,3 +1355,12 @@
     max-width: 26.75rem;
   }
 }
+
+.flexRow--storeLocator {
+  max-width: 1260px;
+  margin-inline: auto;
+}
+
+// .flexRowContent--storeLocator {
+//   margin-top: -248px;
+// }
