[feature/22062] tore-locator styling

--- a/sass/product/vtex.flex-layout.scss
+++ b/sass/product/vtex.flex-layout.scss
@@ -1364,3 +1364,24 @@
 // .flexRowContent--storeLocator {
 //   margin-top: -248px;
 // }
+
+.flexRow--seeAllStores {
+  border-top: 1px solid #d8d8d8;
+}
+
+.flexCol--moreInfo {
+  margin-right: auto;
+  width: 52% !important;
+}
+
+// .flexColChild--moreInfo {
+  
+// }
+
+.flexCol--storeMap {
+  margin-left: auto;
+  width: 60% !important;
+  margin-right: 14px;
+}
+
+ //.vtex-flex-layout-0-x-flexColChild--storeMap
