--- a/sass/vtex.rich-text.scss
+++ b/sass/vtex.rich-text.scss
@@ -20,3 +20,19 @@
     line-height: 24px;
     color: #332C32;
 }
+
+.container--seeAllStores {
+    max-width: 1202px;
+}
+
+.link--seeAllStores {
+    font-size: 14px;
+    color: #291660;
+    text-decoration: none;
+    line-height: 16px;
+    font-weight: 400;
+}
+
+.heading-level-3 {
+    display: none;
+}
