[feature/22062] store-locator styling

--- a/sass/product/vtex.flex-layout.scss
+++ b/sass/product/vtex.flex-layout.scss
@@ -1384,4 +1384,8 @@
   margin-right: 14px;
 }
 
+.flexCol--colTitleStore {
+  max-width: 1260px;
+}
+
  //.vtex-flex-layout-0-x-flexColChild--storeMap
