[feature/22062mobile] initial mobile styling

--- a/sass/vtex.shopper-location.scss
+++ b/sass/vtex.shopper-location.scss
@@ -21,6 +21,10 @@
     flex-direction: column-reverse;
     width: 30%;
     transform: translateY(-31px);
+
+    @include mobile {
+        width: 90%;
+    }
 }
 
 .changeLocationSubmitContainer {
