--- a/sass/vtex.store-locator.scss
+++ b/sass/vtex.store-locator.scss
@@ -1,6 +1,14 @@
+@import '_media-queries.scss';
+@import '_variables.scss';
+
 .storesListCol {
     margin-top: 80px;
     width: 390px;
+
+    @include mobile {
+        max-width: 100vw;
+        width: 100% !important;
+    }
 
     ::-webkit-scrollbar {
         width: 6px;
@@ -39,6 +47,10 @@
 .storesMapCol {
     margin-left: 35px;
     margin-bottom: 50px;
+
+    @include mobile {
+        display: none;
+    }
 }
 
 .addressListItem {
