--- a/sass/vtex.store-locator.scss
+++ b/sass/vtex.store-locator.scss
@@ -8,6 +8,10 @@
     @include mobile {
         max-width: 100vw;
         width: 100% !important;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 
     ::-webkit-scrollbar {
@@ -25,6 +29,10 @@
 
 .storesList {
     padding-right: 8px;
+
+    @include mobile {
+        padding: 0;
+    }
 }
 
 .addressStoreName {
@@ -59,6 +67,9 @@
     margin-bottom: 15px;
     padding: 20px 15px;
     width: 360px;
+    @include mobile {
+    width: 328px;
+    }
 }
 
 .addressListLink {
