--- a/sass/product/vtex.flex-layout.scss
+++ b/sass/product/vtex.flex-layout.scss
@@ -463,6 +463,7 @@
         .flexRow--pdp-quantity-and-add-to-cart-children {
           position: sticky;
           top: calc(100% - 110px);
+          pointer-events: fill;
         }
       }
     }
@@ -1359,6 +1360,16 @@
 .flexRow--storeLocator {
   max-width: 1260px;
   margin-inline: auto;
+
+  @include mobile {
+    padding: 0 16px 0 16px;
+  }
+}
+
+.flexRow--storeLocator-container{
+  &::before{
+    content: "";
+  }
 }
 
 // .flexRowContent--storeLocator {
