[feature/22081] added 'pagination': 'infiniteScroll' prop on search-result-layout

--- a/sass/search/vtex.flex-layout.scss
+++ b/sass/search/vtex.flex-layout.scss
@@ -35,6 +35,10 @@
   }
 }
 
+.flexRow--container-seo {
+  margin-top: -64px;
+}
+
 .flexRowContent--container-seo,
 .flexRowContent--container-seo2,
 .flexRowContent--container-seo3 {
