--- a/sass/product/vtex.flex-layout.scss
+++ b/sass/product/vtex.flex-layout.scss
@@ -1454,4 +1454,11 @@
     }
   }
 
+  .flexRowContent--product-shelf-1-title, 
+  .flexRowContent--product-shelf-2-title, 
+  .flexRowContent--product-shelf-3-title {
+    margin-inline: auto;
+    max-width: 1294px;
+  }
+
 
