[qa/22089] radjusted savings tag position on mobile

--- a/sass/product/vtex.product-price.scss
+++ b/sass/product/vtex.product-price.scss
@@ -10,6 +10,10 @@
     height: 20px;
     width: 38px !important;
 
+    @include mobile {
+      left: -3px;
+    }
+
     &::before {
       content: url("assets/icons/icon_tag_saving.svg");
       display: block;
