--- a/react/components/CustomMegaMenu/style.css
+++ b/react/components/CustomMegaMenu/style.css
@@ -263,9 +263,8 @@
     background-image: url("../../../assets/icons/arrowRight.svg");
   }
   .mobile-mega-menu {
-    top: 0;
+    top: 50px;
     z-index: 2;
-    width: 100vw;
     height: 100vh;
     position: absolute;
     padding: 0 0 101px 24px;
@@ -273,12 +272,12 @@
   }
 
   .mobile-mega-menu-title {
-    font-size: 24px;
+    font-size: 18px;
     color: #5A40A4;
     font-weight: 600;
     display: flex;
     align-items: center;
-    margin: 20px 0;
+    margin-top: 0;
   }
 
   .mobile-subcategory-overflow {
@@ -289,11 +288,12 @@
 
   .mobile-mega-menu-title:before {
     content: "";
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 18px;
     display: inline-block;
-    background-size: 25px;
-    background-image: url("data:image/svg+xml,%3Csvg xml:space='preserve' xmlns='http://www.w3.org/2000/svg' width='100' height='100' style='width:100%25;height:100%25;background-size:initial;background-repeat-y:initial;background-repeat-x:initial;background-position-y:initial;background-position-x:initial;background-origin:initial;background-color:initial;background-clip:initial;background-attachment:initial;animation-play-state:paused'%3E%3Cg style='transform-origin:50%25 50%25;transform:rotate(0deg) scale(1,1);animation-play-state:paused'%3E%3Cpath d='M47.657 9.879 7.5 50.035l40.157 40.157 8.031-8.031-26.446-26.447H92.5V44.356H29.242L55.688 17.91z' fill='%23323232' style='fill:%23323232;animation-play-state:paused' class='ldl-scale'/%3E%3C/g%3E%3C/svg%3E");
+    background-size: 15px;
+    background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg width='18px' height='17px' viewBox='0 0 18 17' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Ctitle%3EF4B0CE16-5F14-4A75-B791-C49388F4B52C%3C/title%3E%3Cg id='Page-1' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd' stroke-linecap='round'%3E%3Cg id='M/-1.3-Menu-2' transform='translate(-16.000000, -71.000000)' stroke='%23291660'%3E%3Cg id='icon-/-arrow-left' transform='translate(16.500000, 72.000000)'%3E%3Cg id='icon-/-arrow-right' transform='translate(8.500000, 7.500000) scale(-1, 1) translate(-8.500000, -7.500000) '%3E%3Cline x1='0' y1='7.5' x2='16' y2='7.5' id='Path'%3E%3C/line%3E%3Cpolyline id='Path-Copy' stroke-linejoin='round' points='9 15 17 7.54050331 9 0'%3E%3C/polyline%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    background-repeat: no-repeat;
     margin-right: 5px;
   }
 
@@ -301,6 +301,8 @@
     padding: 0;
     overflow-y: auto;
     max-height: 100vh;
+    width: 278px;
+    transform: translateX(-7px);
   }
 
   .mobile-mega-menu-items--item {
