[qa/22095] pdp faq section hided

--- a/sass/product/vtex.flex-layout.scss
+++ b/sass/product/vtex.flex-layout.scss
@@ -544,6 +544,7 @@
 
   &--pdp-faq {
     background-color: #f6f6f6;
+    display: none;
 
     @include breakpoint('mobile') {
       margin-bottom: 2.5rem;
