--- a/sass/header/vtex.store-link.scss
+++ b/sass/header/vtex.store-link.scss
@@ -16,7 +16,7 @@
     background: transparent;
     border: none;
     text-transform: capitalize;
-    padding: 4px 5px 0 15px;
+    padding: 4px 5px 0;
 
     &:hover {
       background: none;
