[qa/22096] adjusted margin-bottom of dataEntryLabel

--- a/sass/vtex.my-account.scss
+++ b/sass/vtex.my-account.scss
@@ -177,6 +177,9 @@
   .dataEntryLabel{
     font-size: 12px;
     font-weight: 600;
+    @include mobile {
+      margin-bottom: 1px;
+    }
   }
 
   .addressList {
